# app

./: .gitignore  Cargo.toml  PKGBUILD  README.md  biome.json  next.config.ts  package.json
.github/workflows/: update_aur.yml
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: frontend.rs  lib.rs  main.rs  ui.rs
src-tauri/src/binary/: mod.rs  vmpak.rs
src-tauri/src/core/: archive.rs  context.rs  download_service.rs  mod.rs  provider_api.rs  secret_service.rs
src-tauri/src/providers/: mod.rs  modworkshop_provider.rs  payday_2_test.rs
src-tauri/src/screens/: library.rs  mod.rs  test_screen.rs
src-tauri/src/services/: capability_service.rs  mod.rs  mod_service.rs
src-tauri/src/traits/: game_provider_trait.rs  mod.rs  mod_provider_trait.rs
src/app/: layout.tsx  page.tsx
src/app/debug/: page.tsx
src/app/discover/: page.tsx
src/app/downloads/: page.tsx
src/binary/: mod.rs  vmpak.rs
src/components/: input.tsx  modOverlay.tsx  select.tsx  sidebar.tsx
src/components/primitives/: button.tsx  card.tsx  dialog.tsx  pagination.tsx
src/components/ui/: filterTag.tsx  modCard.tsx  modOverlay.tsx  paginationBar.tsx
src/components/ui/apiKeyModal/: modal.tsx
src/core/: ProviderAPI.rs  mod.rs
src/lib/: numbers.ts
src/lib/taurpc/: useTaurpc.ts
src/lib/types/: discover.tsx  mods.tsx
src/lib/viewSystem/: View.tsx  useViewManager.ts
src/providers/: mod.rs  nexus_mods_provider.rs
src/styles/: globals.css
src/traits/: ModProviderTrait.rs  mod.rs  mod_provider_trait.rs
src/views/dashboard/: gameView.tsx  nogame.tsx
