[package]
name = "VMM"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[features]
unstable-nexus = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "app_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
async-trait = "0.1.89"
fern = "0.7.1"
futures-util = "0.3.31"
humantime = "2.3.0"
log = "0.4.28"
nvml-wrapper = "0.11.0"
reqwest = { version = "0.12.23", features = ["stream", "rustls-tls", "json"] }
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.17"
dirs = "6.0.0"
zip = "4.2.0"
anyhow = "1.0.100"
tempdir = "0.3.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-log = "0.2.0"
steamlocate = "2.0.1"
