[package]
name = "VMM"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[features]
unstable-nexus = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "app_lib"
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
# VMM specific
lib-vmm = { git = "https://github.com/void-mod-manager/lib-vmm", branch = "feat/specta-types", features = ["specta"] }
vmm-providers = { git = "https://github.com/void-mod-manager/providers", branch = "main" }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.3", features = [] }
tauri-plugin-log = "2"
async-trait = "0.1.89"
fern = "0.7.1"
futures-util = "0.3.31"
humantime = "2.3.0"
log = "0.4.28"
nvml-wrapper = "0.11.0"
reqwest = { version = "0.12.24", features = ["stream", "rustls-tls", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
dirs = "6.0.0"
zip = "6.0.0"
anyhow = "1.0.100"
tempdir = "0.3.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-log = "0.2.0"
steamlocate = "2.0.1"
once_cell = "1.21.3"
taurpc = "0.5.2"
specta = {version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
