[package]
name = "void-mod-manager"
version = "0.1.0"
description = "A simple mod manager"
authors = ["Void modding team"]
license = ""
repository = "https://github.com/void-modding/app"
edition = "2021"
rust-version = "1.77.2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
# VMM specific
lib-vmm = { git = "https://github.com/void-modding/lib-vmm", branch = "feat/capabilities", features = ["specta"] }
# vmm-providers = { git = "https://github.com/void-modding/providers", branch = "main" }

serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.3", features = [] }

# Networking & FS
async-trait = "0.1.89"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = ["stream", "rustls-tls"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
dirs = "6.0.0"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-log = "0.2.0"

# RPC
taurpc = "0.5.2"
specta = {version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"

[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.11.0"
